--- a/WorldProject/PopulationApp/templates/choose_countries.html
+++ b/WorldProject/PopulationApp/templates/choose_countries.html
@@ -11,6 +11,13 @@
     <h1>choose_countries</h1>
 
     <form action="" method="post">
+        <select name="measure" id="">
+            <option value="tari" {% if measure == "tari" %}
+            selected {% endif %}
+            >Tari</option>
+            <option value="suprafete"{% if measure == "suprafete" %}
+            selected {% endif %}>Suprafete</option>
+        </select>
         {% csrf_token %}
         {% for country in countries %}
             <input type="checkbox" name="{{country}}" id="" 
