--- a/WorldProject/PopulationApp/templates/choose_countries.html
+++ b/WorldProject/PopulationApp/templates/choose_countries.html
@@ -14,7 +14,7 @@
         <select name="measure" id="">
             <option value="tari" {% if measure == "tari" %}
             selected {% endif %}
-            >Tari</option>
+            >Populatie</option>
             <option value="suprafete"{% if measure == "suprafete" %}
             selected {% endif %}>Suprafete</option>
         </select>
